--- a/ChainServer/.gitignore
+++ b/ChainServer/.gitignore
@@ -47,10 +47,10 @@ htmlcov/
 .DS_Store
 Thumbs.db
 
-# Environment variables
+# Environment variables (keep .env.example for documentation)
 .env
 .env.local
-*.env
+!.env.example
 
 # Logs
 *.log
