--- a/ChainServer/pyproject.toml
+++ b/ChainServer/pyproject.toml
@@ -43,12 +43,22 @@ openai = [
 anthropic = [
     "langchain-anthropic>=0.1.0",
 ]
+observability = [
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-exporter-otlp>=1.20.0",
+    "structlog>=23.0.0",
+]
 all = [
     "tiktoken>=0.5.0",
     "langchain-core>=0.1.0",
     "langchain-text-splitters>=0.0.1",
     "langchain-openai>=0.0.5",
     "langchain-anthropic>=0.1.0",
+    "opentelemetry-api>=1.20.0",
+    "opentelemetry-sdk>=1.20.0",
+    "opentelemetry-exporter-otlp>=1.20.0",
+    "structlog>=23.0.0",
 ]
 dev = [
     "pytest>=7.4.0",
