--- a/ChainServer/agentorchestrator/.env.example
+++ b/ChainServer/agentorchestrator/.env.example
@@ -1,5 +1,5 @@
 # ═══════════════════════════════════════════════════════════════════════════════
-#                           FLOWFORGE CONFIGURATION
+#                        AGENTORCHESTRATOR CONFIGURATION
 # ═══════════════════════════════════════════════════════════════════════════════
 # Copy this file to .env and fill in your values
 # cp .env.example .env
