--- a/ChainServer/workflows/cmpt/.env.sample
+++ b/ChainServer/workflows/cmpt/.env.sample
@@ -106,7 +106,7 @@ CHUNK_OVERLAP=0
 # ZoomInfo Configuration
 # -----------------------------------------------------------------------------
 ZOOM_INFO_URL=https://act
-ZOOM_INFO_USERNAME=harneet.aulak@rbccm.com
+ZOOM_INFO_USERNAME=
 ZOOM_INFO_PASSWORD=$
 
 # -----------------------------------------------------------------------------
